--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+a{
+  text-decoration:none !important;
+  color:inherit !important;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home{
+  display:flex;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.productContainer{
+   display:flex;
+   width:78%;
+   padding:20px;
+   flex-wrap: wrap;
+   justify-content:space-around;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.filters{
+  background-color: #343a40;
+  color:white;
+  padding:20px;
+  display:flex;
   flex-direction: column;
+  width:20%;
+  margin:10px;
+  height:86vh;
+}
+.filters > span {
+  padding-bottom: 20px;
+}
+.title{
+  font-size: 30px;
+}
+.products{
+  width:70%;
+  margin: 10px;
+}
+.cartitem{
+   display:flex;
+  justify-content:space-around; 
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 20px;
+  margin-bottom: 20px;  
 }
-
-.App-link {
-  color: #61dafb;
+.cartItemImg{
+   border-radius:50%;
+   width: 50px;
+   height: 50px;
+   object-fit: cover;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cartItemDetail{
+  display: flex;
+  flex:1;
+  padding: 0 20px;
+  flex-direction: column;
+}
+.summary{
+  width:30%;
 }
